# met1

./: .gitignore  AGENTS.md  README.md  config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: data-task.yml  engineering-task.yml
.github/workflows/: ci.yml
data/samples/: frame_case.yaml  lira_element_forces.csv  load_combinations.csv  section_catalog.csv  selected_sections_labels.csv  sp20_loads.csv
data/templates/: frame_cases.csv  lira_element_forces.csv  lira_raw_results_index.csv  load_combinations.csv  ml_training_dataset_columns.csv  section_catalog.csv  selected_sections_labels.csv  sp20_loads.csv
docs/: TZ.md  architecture.md  automation.md  backlog.md  codex-master-prompt.md  github-setup.md  initial-issues.md  ml-dataset.md  project-export.json  sp20-loads.md
docs/decisions/: 0001-github-workflow.md
src/steel_frame_designer/: __init__.py  checks_sp16.py  cli.py  config.py  demo.py  geometry.py  lira_import.py  load_combinations.py  materials.py  ml_data.py  ml_model.py  optimizer.py  reports.py  sections.py  sp20_loads.py  ui_streamlit.py
tests/: test_cli.py  test_config.py  test_demo_pipeline.py  test_geometry.py  test_lira_import.py  test_ml_model.py  test_required_models.py  test_sp20_loads.py
