[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "steel-frame-designer"
version = "0.1.0"
description = "Single-section selection workflow for 2D gable steel frames."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2",
  "typer>=0.12",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]
ui = [
  "streamlit>=1.36",
]
ml = [
  "scikit-learn>=1.5",
  "pandas>=2.2",
]

[project.scripts]
steel-frame-designer = "steel_frame_designer.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
